# ProjectPipeline

./: .dockerignore  .env.example  Dockerfile  Procfile  README.md  docker-compose.yml  gunicorn.conf.py  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  setup.bat  setup.ps1
scripts/: backfill_data.py  check_collectors.py  check_github_collector.py  check_spotify_collector.py  get_spotify_refresh_token.py  init_db.py  quick_start.py  start_app.py
src/api/: __init__.py  main.py  schemas.py
src/api/routes/: admin.py  dashboard.py  github.py  spotify.py
src/collectors/: __init__.py  _base.py  github_client.py  spotify_client.py  steam_client.py
src/dashboard/: __init__.py  api_client.py  app.py  components.py
src/dashboard/pages/: github.py  overview.py  spotify.py
src/pipeline/: __init__.py  config.py  database.py  models.py  utils.py
src/pipeline_jobs/: __init__.py  aggregation_job.py  github_job.py  scheduler.py  spotify_job.py
