[tool.poetry]
name = "personal-data-analytics-dashboard"
version = "0.1.0"
description = "A full-stack data pipeline aggregating GitHub, Spotify, and Steam data with interactive visualizations"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
	{include = "pipeline", from = "src"},
	{include = "collectors", from = "src"},
	{include = "pipeline_jobs", from = "src"},
	{include = "api", from = "src"},
	{include = "dashboard", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.10"

# Database
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"  # PostgreSQL driver

# API
fastapi = "^0.104"
uvicorn = {extras = ["standard"], version = "^0.24"}
pydantic = "^2.0"
pydantic-settings = "^2.0"

# Data fetching
requests = "^2.31"
httpx = "^0.25"

# Scheduling
apscheduler = "^3.10"

# Dashboard
dash = "^2.14"
plotly = "^5.17"
dash-bootstrap-components = "^1.5"
gunicorn = "^22.0"

# Data processing
pandas = "^2.2"
numpy = "^2.0"

# Utilities
python-dotenv = "^1.0"
python-dateutil = "^2.8"
pytz = "^2023.3"

# Logging
loguru = "^0.7"

# Testing
pytest = "^8.0"
pytest-asyncio = "^0.24"
pytest-cov = "^5.0"
respx = "^0.21"  # For mocking httpx requests

[tool.poetry.group.dev.dependencies]
black = "^23.11"
flake8 = "^6.1"
mypy = "^1.7"
isort = "^5.12"
pylint = "^3.0"
pre-commit = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = ["src"]
